--- a/package.json
+++ b/package.json
@@ -1,5 +1,20 @@
 {
+  "name": "scheduler-bot",
+  "version": "0.2.3",
+  "private": true,
+  "main": "dist/main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^22.5.5",
+    "typescript": "^5.6.2"
+  },
   "dependencies": {
-    "node-telegram-bot-api": "^0.66.0"
+    "telegraf": "^4.16.3"
   }
 }
