--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/node": "^22.5.5",
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "luxon": "^3.5.0",
     "telegraf": "^4.16.3"
   }
 }
